changed home page

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
           <img class="rounded-img" src="img.jpg" alt="Anatoly" />
           <h1 class="fw-light">Anatoly Efremov</h1>
           <p class="lead text-muted">
-            I really want to get my first offer. Because I want to feel more
-            independent
+            Hi, my name is Anatoly Efremov. I write code in Java.
           </p>
           <a
             href="https://github.com/AnatolyEfremov"
